    - added contributors and contributees API methods
    - added geo_search, geo_search, similar_places, and add_place API methods
    - friends/followers API methods deprecated
    - implemented the *new* Lists API in the API::REST trait
    - replaced MX:MultiInitArg::Trait with MX:Aliases (Justin Hunter)
    - fixed bad whatis entry (patch from debian, closes RT #67203)
    - use Digest::SHA instead of Digest::SHA1 (patch from debian, closes RT #67202)

3.17001 2011-03-31
    - fixed intermittent bug in AutoCursor (result of Class::MOP anon class caching)

3.17000 2011-03-29
    - production release with new AutoCursor trait

3.16000_1 2011-03-27
    - Added AutoCursor trait

3.16000 2011-03-26
    - Moved trends methods to API::REST; added warning to API::Search::Trends
    - Added no_retweet_ids method
    - modify searchapiurl for identica option
    - added deprecation notice to Net::Identica with Net::Twitter examples
    - replaced Test::Exception with Test::Fatal in tests

3.15000 2011-02-25
    - added Lists API method members_create_all (alias add_list_members)
    - added tests dependency: Test::Exception (closes RT #65786)

3.14003 2011-02-07
    - Fixed: trends_location (closes RT #65506)
    - Added parameters trim_user, include_entities, include_rts (frank cuny, closes RT #62542)

3.14002 2010-11-02
   - Fixed: use File::Spec tests that failed in Win32 (turugina)

3.14001 2010-10-19
    - Make Crypt::SSLeay a hard requirement (really no longer practical without it)

3.14000 2010-10-19
    - Added #newtwitter API methods (account_totals, account_settings,
      suggestion_categories, user_suggestions, show_direct_message,
      retweeted_to_user, retweeted_by_user, lookup_friendships,
      update_friendship, all_lists, related_results)
    - fixed: memory leak in RateLimit trait

3.13009 2010-09-17
    - use Athorization header for OAuth token requests rather than query params
    - "identica => 1" sets OAuth URLs (assist from barbie)